# pressroom

./: .env.example  .gitignore  AGENTS.md  AUDIT_TRAIL.md  CLAUDE.md  README.md  main.py  pyproject.toml
context/: CALLOUT.md  CHAT.md  DAISYUI_FENCES.md  LIST.md  MERMAID_AUTHORING.md  MOCKUP_BROWSER.md  MOCKUP_PHONE.md  MOCKUP_WINDOW.md  STEPS.md  visual-components-menu.md
docs/: TEMPLATES.md
src/: audit.py  config.py  docs_loader.py  graph.py  json_query.py  llm.py  mdx_document.py  state.py  template_config.py
src/agents/: _style.py  humanizer.py  humanizer_patterns.py  loader.py  metadata.py  outline.py  publisher.py  reviewer.py  writer.py
src/agents/visualizer/: __init__.py  _databind.py  _echart.py  _extractor.py  _mermaid.py  _ui.py
src/visuals/: __init__.py  registry.py  render.py
templates/: default.yaml  finance-analysis.yaml
templates/visuals/: category-bar.yaml  grouped-bar.yaml  price-line.yaml  verdict-callout.yaml
tests/: test_audit.py  test_databind.py  test_docs_loader.py  test_echart.py  test_extractor.py  test_graph_routing.py  test_humanizer.py  test_humanizer_patterns.py  test_json_query.py  test_llm.py  test_loader.py  test_main.py  test_mdx_document.py  test_mermaid.py  test_metadata.py  test_outline.py  test_publisher.py  test_reviewer.py  test_style.py  test_template_config.py  test_ui_fence.py  test_visual_registry.py  test_visual_render.py  test_visualizer.py  test_writer.py
tests/fixtures/reports/CRM/: analysis.json  valuation_data.json
