[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pressroom"
version = "0.1.0"
description = "Multi-agent system for writing albertoduran.com journal publications"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=1.1.0",
    "ollama>=0.6.0",
    "langgraph>=0.2.60",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "python-dotenv>=1.0.1",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
thejournal = "main:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
